--- a/Rustoga Portfolio/css/style.css
+++ b/Rustoga Portfolio/css/style.css
@@ -113,7 +113,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	
 	
 	
-	url(../img/demoreel.mp4) no-repeat right top;
+	url(../img/intro-bg.jpg) no-repeat right top;
 	background-color: #e5e5e5;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
